Extend team member document permissions
